--- a/index.html
+++ b/index.html
@@ -95,6 +95,24 @@
 </article>
 <article class=post-entry>
 <header class=entry-header>
+<h2>Roguelike In Rust 02: Hello Rust
+</h2>
+</header>
+<section class=entry-content>
+<p>Rust 算是一个新兴的语言，近两年非常火了，但是他首次出现是在 2010 年。Rust 有非常好用的工具 cargo 和 rustup。
+如果要学习 Rust 这门编程语言，也有很多优秀的教程。
+The Rust Programming Language Book Learn Rust by Example 24 Days of Rust Rust’s Ownership Model for Javascript Developers Rust 编辑器可以使用 VSCode
+在终端中使用命令 cargo new hellorust 可以创建一个名为 hellorust 的工程。src/main.rs 是起始文件。Cargo.toml 是工程的配置文件，里面包含了一些其他库的引用信息。
+此时 src/main.rs 的代码如下
+fn main() { println!("Hello, world!"); } fn 是函数的关键字 main 是主函数名，也就是整个程序的起始函数。 println! 是一个打印宏 使用命令 cargo run 可以编译并运行工程。
+一些有用的 cargo 命令
+cargo init 初始化一个新的工程 cargo build 会下载所有的依赖库，并且编译整个项目 cargo update 会根据 Cargo....</p>
+</section>
+<footer class=entry-footer><span title="2022-02-02 17:44:42 +0800 CST">February 2, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;fred</footer>
+<a class=entry-link aria-label="post link to Roguelike In Rust 02: Hello Rust" href=https://blog.moeif.com/posts/roguelike-rs-02-hellorust/></a>
+</article>
+<article class=post-entry>
+<header class=entry-header>
 <h2>Roguelike In Rust 01: 前言
 </h2>
 </header>
@@ -102,7 +120,8 @@
 <p>这个教程是免费和开源的，所有的代码都使用 MIT 协议，可以无限制的免费使用。希望这个系列的教程可以帮助大家做出更优秀的游戏。
 每一年，有一些大神都会在 r/roguelikedev 上启动一个周二教程系列，以此来鼓励更多的程序员加入 Roguelike 游戏开发者行列中。大多数的编程语言已经被使用过了，所以在今年，我决定使用 Rust。我不是很想用默认的引擎 libtcod，所以我自己写了一个，名为 RLTK。刚开始的时候并不是很好，但是也让我学到了很多，如果你有兴趣，代码在此 -> rustyroguelike
 上面的 rustyroguelike 代码是使用 Python 和 libtcod 来实现的。
-我一直很想使用一下 Entity Component System。而 Rust 有一个很好的库 Specs。我已经在之前的游戏中使用过 ECS 的理念，所以再次使用 ECS，一切就很自然了。在 reddit 上，ECS 也是一个一直以来有争议的方向。所以我希望这次的教程可以让大家理解 ECS 的利弊。</p>
+我一直很想使用一下 Entity Component System。而 Rust 有一个很好的库 Specs。我已经在之前的游戏中使用过 ECS 的理念，所以再次使用 ECS，一切就很自然了。在 reddit 上，ECS 也是一个一直以来有争议的方向。所以我希望这次的教程可以让大家理解 ECS 的利弊。
+注意：这个系列的教程并不是面向 Rust 0 基础的朋友，至少要有一点 Rust 的语言基础才行。</p>
 </section>
 <footer class=entry-footer><span title="2022-02-02 14:44:42 +0800 CST">February 2, 2022</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;fred</footer>
 <a class=entry-link aria-label="post link to Roguelike In Rust 01: 前言" href=https://blog.moeif.com/posts/roguelike-rs-01-introduction/></a>
@@ -221,19 +240,6 @@ using System.Collections; using System.Collections.Generic; using UnityEngine; p
 </section>
 <footer class=entry-footer><span title="2021-12-12 19:47:49 +0800 CST">December 12, 2021</span>&nbsp;·&nbsp;1 min&nbsp;·&nbsp;fred</footer>
 <a class=entry-link aria-label="post link to This Week In Moeif 25" href=https://blog.moeif.com/posts/this-week-in-moeif-25/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Rust 光线追踪 14: 最终汇总效果
-</h2>
-</header>
-<section class=entry-content>
-<p>这一节没有新的知识，只是将之前知识汇总起来，然后生成一张最终的图，最终生成的图如下
-首先，将创建世界及添加物体的代码从 main 函数中删除，然后抽象成一个函数 random_scene，在这个函数中，会随机生成一些球体，并且根据规则，随机使用我们的已有的三个材质。
-// src/main.rs fn random_scene() -> HittableList { let mut world = HittableList::new(); let ground_material = Lambertian::new(Color::new(0.5, 0.5, 0.5)); world.add(Box::new(Sphere::new( Vec3::new(0.0, -1000.0, 0.0), 1000.0, ground_material, ))); let mut rng = rand::thread_rng(); // 生成一些小球 for a in -11..11 { for b in -11..11 { let choose_mat: f64 = rng.gen(); let x_offset: f64 = rng.gen(); let z_offset: f64 = rng.gen(); let center = Vec3::new(a as f64 + 0....</p>
-</section>
-<footer class=entry-footer><span title="2021-12-11 20:40:15 +0800 CST">December 11, 2021</span>&nbsp;·&nbsp;2 min&nbsp;·&nbsp;fred</footer>
-<a class=entry-link aria-label="post link to Rust 光线追踪 14: 最终汇总效果" href=https://blog.moeif.com/posts/ray-tracing-in-one-week-rs-14/></a>
 </article>
 <footer class=page-footer>
 <nav class=pagination>
